[package]
name = "car"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
unused-locals = "deny"


[dependencies]
chrono = "~0.4.31"
image = "0.24.7"
imageproc = "0.23.0"
log = "~0.4.20"
log4rs = "~1.2.0"
num = "~0.4.1"
rppal = "~0.15.0"
